src/objects/Brand_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Contract</label>
        <referenceTo>Contracted_Brand__c</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_URL__c</fullName>
        <label>Brand URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Ops_Lead_Email__c</fullName>
        <label>Client Ops Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Ops_Lead__c</fullName>
        <label>Client Ops Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Success_Lead_Email__c</fullName>
        <label>Client Success Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Success_Lead__c</fullName>
        <label>Client Success Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Release_Date__c</fullName>
        <label>Code Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Agreement</label>
        <referenceTo>APXT_Redlining__Contract_Agreement__c</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <label>Go-Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IR__c</fullName>
        <inlineHelpText>Implementation Request #</inlineHelpText>
        <label>IR#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Smart Button</fullName>
                </value>
                <value>
                    <fullName>SmartLink</fullName>
                </value>
                <value>
                    <fullName>Store Locator</fullName>
                </value>
                <value>
                    <fullName>eShop</fullName>
                </value>
                <value>
                    <fullName>Click2Cart</fullName>
                    <isActive>false</isActive>
                    <label>Click2Cart</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Shopper's Choice</fullName>
                    <isActive>false</isActive>
                    <label>Shopper's Choice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brand Implementations</relationshipLabel>
        <relationshipName>Brand_Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Smartlink_Revenue__c</fullName>
        <label>Monthly Smartlink Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Smartsite_Revenue__c</fullName>
        <label>Monthly Smartsite Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Revenue__c</fullName>
        <label>Other Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <label>Playbook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <label>Project Timeline</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Kick Off</fullName>
                </value>
                <value>
                    <fullName>Client IMP &amp; Tech Training</fullName>
                </value>
                <value>
                    <fullName>SC Imp &amp; Build Out</fullName>
                </value>
                <value>
                    <fullName>QA / Optimization</fullName>
                </value>
                <value>
                    <fullName>Go Live</fullName>
                </value>
                <value>
                    <fullName>Client User Training</fullName>
                </value>
                <value>
                    <fullName>Post Launch Eval / Hand Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Decommissioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Brand Implementation</label>
    <nameField>
        <label>Brand Implementation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>